src/test/ui/parser/trait-pub-assoc-ty.stderr
error: unnecessary visibility qualifier
  --> $DIR/trait-pub-assoc-ty.rs:2:5
   |
LL |     pub type Foo;
   |     ^^^ `pub` not permitted here

error: aborting due to previous error

